--- a/djangosite/home/templates/home/index.html
+++ b/djangosite/home/templates/home/index.html
@@ -6,7 +6,7 @@
 
   <form action="" method="get">
     {{ form }}
-    <input type="submit" value="Enter" />
+    <button id="search-button">Search</button>
   </form>
 
   {% if query %}
