--- a/djangosite/home/static/style.css
+++ b/djangosite/home/static/style.css
@@ -6,12 +6,23 @@
 body { padding-top: 56px; }
 nav .container { padding: 0; }
 .navbar-brand { font-family: "Trebuchet MS", Helvetica, sans-serif; font-weight: bolder }
-.nav-link { padding: 0 0.8rem 0 0.8rem !important; }
+.nav-link { padding-left: 0.8rem !important; padding-right: 0.8rem !important; }
 
 form input, form select { margin: 0 5px 0 5px; }
 form label { padding-left: 5px; }
+input { font-size: 20px !important; width: 220px; }
+#search-button {
+    background-color: #ddd;
+    font-size: 20px;
+    padding: 2px 21px;
+    border-radius: 6px;
+    -webkit-transition-duration: 0.2s; /* Safari */
+    transition-duration: 0.2s;
+}
+#search-button:hover { background-color: darkgray; }
 
 table, th, td { border: 1px solid gray; border-collapse: collapse; padding: 0px 7px 2px 7px; } 
+td.button-cell { padding: 3px 7px 3px 7px; }
 table { margin-bottom: 20px; }
 
 .progressbar { background-color: #aaa; border-radius: 2px; width: 105px; }
